@@ -14,6 +14,8 @@ use these inclusion patterns" (Lacton).
 * Fixed: BUILDR-110 Error creating buildfile from POM when missing plugin
 configuration (Geoffrey Ruscoe).
 * Fixed: BUILDR-112 Using a user gem repository with 'rake setup' (Lacton).
+* Fixed: BUILDR-114 Hash.from_java_properties does not behave
+like java.util.Properties (Lacton).
 * Docs: BUILDR-111 Troubleshoot tip when Buildr's bin directory shows up in
 RUBYLIB (Geoffrey Ruscoe).
 
